# AoC

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
_template/: CMakeLists.txt
_template/src/aoc/: Main.cpp
_template/src/aoc/days/: Day1.cpp
common/: CMakeLists.txt
common/src/common/: Day.hpp  Runner.cpp  Runner.hpp
common/src/common/data/: CappedBinarySearchList.hpp  DisjointSet.hpp
common/src/common/debug/: Formatters.hpp  GeometricInfoDump.hpp
common/src/common/fuckingmathbullshit/: EqSystem.cpp  EqSystem.hpp
common/src/common/hardmath/: EqSystem.cpp
common/src/common/loader/: Loader.hpp
common/src/common/math/: Vec.hpp  VecN.hpp
common/src/common/platform/: Int128.hpp
common/tests/: CMakeLists.txt
common/tests/src/: CappedBinarySearchListTests.cpp  DisjointSetTests.cpp  EqSystemTests.cpp  VecTests.cpp
dev/devenv/: .env.devenv  .shell.devenv
y2019/: CMakeLists.txt
y2019/inputs/test/: day4.1.txt
y2019/src/: CMakeLists.txt
y2019/src/aoc/: Main.cpp
y2019/src/aoc/days/: Day1.cpp  Day1.hpp  Day10.cpp  Day10.hpp  Day11.cpp  Day11.hpp  Day12.cpp  Day12.hpp  Day13.cpp  Day13.hpp  Day14.cpp  Day14.hpp  Day15.cpp  Day15.hpp  Day2.cpp  Day2.hpp  Day3.cpp  Day3.hpp  Day4.cpp  Day4.hpp  Day5.cpp  Day5.hpp  Day6.cpp  Day6.hpp  Day7.cpp  Day7.hpp  Day8.cpp  Day8.hpp  Day9.cpp  Day9.hpp
y2019/src/aoc/intcode/: IntCode.cpp  IntCode.hpp
y2019/tests/: CMakeLists.txt
y2019/tests/src/: Day10Tests.cpp  Day12Tests.cpp  Day14Tests.cpp  Day1Tests.cpp  Day2Tests.cpp  Day3Tests.cpp  Day4Tests.cpp  Day6Tests.cpp  Day7Tests.cpp  Day8Tests.cpp  IntCodeTests.cpp  RegressionTests.cpp
y2025/: CMakeLists.txt
y2025/inputs/test/: day1.3.txt  day1.4.txt  day9.2.txt
y2025/src/: CMakeLists.txt
y2025/src/aoc/: Main.cpp
y2025/src/aoc/days/: Day1.cpp  Day1.hpp  Day10.cpp  Day10.hpp  Day11.cpp  Day11.hpp  Day12.cpp  Day12.hpp  Day2.cpp  Day2.hpp  Day3.cpp  Day3.hpp  Day4.cpp  Day4.hpp  Day5.cpp  Day5.hpp  Day6.cpp  Day6.hpp  Day7.cpp  Day7.hpp  Day8.cpp  Day8.hpp  Day9.cpp  Day9.hpp
y2025/tests/: CMakeLists.txt
y2025/tests/src/: Day10Tests.cpp  Day11Tests.cpp  Day12Tests.cpp  Day1Tests.cpp  Day2.cpp  Day2Tests.cpp  Day3Tests.cpp  Day4Tests.cpp  Day5Tests.cpp  Day6Tests.cpp  Day7Tests.cpp  Day8Tests.cpp  Day9Tests.cpp  Regression.cpp  RegressionTests.cpp
